infra/k8s/prod-apps/deployment.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-hub-deployment
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 1
  minReadySeconds: 80
  selector:
    matchLabels:
      service: finance-hub
  template:
    metadata:
      labels:
        app: finance-hub
        service: finance-hub #labels for the pods e.g kubectl get pod -l "service in (http-server)"
    spec:
      containers:
      - name: finance-hub
        image: 797036517683.dkr.ecr.eu-west-1.amazonaws.com/finance-hub:IMAGETAG
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "4"
            memory: 8Gi
          requests:
            cpu: "3"
            memory: 6Gi
        ports:
        - name: finance-hub
          containerPort: 8069
