infra/k8s/prod-apps/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: finance-hub
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:eu-west-1:820808869900:certificate/717ac2ae-01bf-481b-b46b-79c60bda0afe"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "600"
spec:
  type: LoadBalancer
  selector:
    app: finance-hub
  ports:
  - name: finance-hub
    port: 80
    targetPort: finance-hub
  - name: finance-hub-https
    port: 443
    targetPort: finance-hub

---
apiVersion: v1
kind: Service
metadata:
  name: finance-hub-service
spec:
  type: ClusterIP
  selector:
    app: finance-hub
  ports:
    - port: 80
      targetPort: finance-hub
      protocol: TCP
      name: http
